fixed background conversion & background-size
fixed the wrong conversion of the image by `.gitattributes` and made the image cover the whole screen.

--- a/static/style.css
+++ b/static/style.css
@@ -16,6 +16,7 @@ body {
   margin: 0;
   padding: 0;
   background-repeat: no-repeat;
+  background-size: cover;
   background-image: url("ComunicationLTD.png");
   display: flex;
   justify-content: center;
